<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layEditOperations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCopyToClipboard"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginLeft="2pt"
            android:layout_marginRight="2pt"
            android:layout_weight="1"
            android:text="@string/copy_to_clipboard"
            android:textSize="12sp"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnPasteFromClipboard"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginLeft="2pt"
            android:layout_marginRight="2pt"
            android:textSize="12sp"
            android:layout_weight="1"
            android:text="@string/paste_from_clipboard"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnClear"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginLeft="2pt"
            android:layout_marginRight="2pt"
            android:textSize="12sp"
            android:layout_weight="1"
            android:text="@string/clear"
            android:textAllCaps="false" />

        <ImageButton
            android:id="@+id/btnDelete"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginLeft="2pt"
            android:layout_marginRight="2pt"
            android:layout_weight="1"
            app:srcCompat="@android:drawable/ic_input_delete" />
    </LinearLayout>

    <TextView
        android:id="@+id/txvResult"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginLeft="2pt"
        android:layout_marginRight="2pt"
        android:background="#4A48E386"
        android:clickable="true"
        android:gravity="center"
        android:textIsSelectable="true"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edtFormula"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2pt"
        android:layout_marginRight="2pt"
        android:autofillHints=""
        android:hint="@string/edtFormulaHint"
        android:inputType="textVisiblePassword" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@android:drawable/ic_media_rew" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TableLayout
                    android:id="@+id/tlyVars12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <EditText
                            android:id="@+id/edtVarName1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="2pt"
                            android:layout_marginEnd="1pt"
                            android:layout_weight="1"
                            android:hint="Переменная №1"
                            android:inputType="text"
                            android:textSize="13sp" />

                        <EditText
                            android:id="@+id/edtVarValue1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="1pt"
                            android:layout_marginEnd="2pt"
                            android:layout_weight="1"
                            android:hint="Значение"
                            android:inputType="text"
                            android:textSize="13sp" />
                    </TableRow>
                </TableLayout>

                <TableLayout
                    android:id="@+id/tlyVars22"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <EditText
                            android:id="@+id/edtVarName2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="2pt"
                            android:layout_marginEnd="1pt"
                            android:layout_weight="1"
                            android:hint="Переменная №2"
                            android:inputType="text"
                            android:textSize="13sp" />

                        <EditText
                            android:id="@+id/edtVarValue2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="1pt"
                            android:layout_marginEnd="2pt"
                            android:layout_weight="1"
                            android:hint="Значение"
                            android:inputType="text"
                            android:textSize="13sp" />
                    </TableRow>

                </TableLayout>

                <TableLayout
                    android:id="@+id/tlyVars3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:divider="?attr/dividerVertical">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <EditText
                            android:id="@+id/edtVarName3"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginStart="2pt"
                            android:layout_marginEnd="1pt"
                            android:layout_weight="1"
                            android:hint="Переменная №3"
                            android:inputType="text"
                            android:textSize="15sp" />

                        <EditText
                            android:id="@+id/edtVarValue3"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginStart="1pt"
                            android:layout_marginEnd="2pt"
                            android:layout_weight="1"
                            android:hint="Значение"
                            android:inputType="text"
                            android:textSize="15sp" />

                    </TableRow>

                </TableLayout>

            </LinearLayout>
        </HorizontalScrollView>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@android:drawable/ic_media_ff" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/laySimpleOperations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnPlus"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginLeft="2pt"
            android:layout_marginRight="2pt"
            android:layout_weight="1"
            android:focusable="false"
            android:text="@string/plusUI"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btnMinus"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginLeft="2pt"
            android:layout_marginRight="2pt"
            android:layout_weight="1"
            android:focusable="false"
            android:text="@string/minusUI"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btnMultiply"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginLeft="2pt"
            android:layout_marginRight="2pt"
            android:layout_weight="1"
            android:focusable="false"
            android:text="@string/multiplyUI"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btnDivision"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginLeft="2pt"
            android:layout_marginRight="2pt"
            android:layout_weight="1"
            android:focusable="false"
            android:text="@string/divisionUI"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layAdvancedMathOperations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnExp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2pt"
            android:layout_marginRight="2pt"
            android:layout_weight="1"
            android:focusable="false"
            android:text="@string/expUI"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnLog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2pt"
            android:layout_marginRight="2pt"
            android:layout_weight="1"
            android:focusable="false"
            android:text="@string/logUI"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnLog10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2pt"
            android:layout_marginRight="2pt"
            android:layout_weight="1"
            android:focusable="false"
            android:text="@string/log10UI"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnRandom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2pt"
            android:layout_marginRight="2pt"
            android:layout_weight="1"
            android:focusable="false"
            android:text="@string/randomUI"
            android:textAllCaps="false" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layAdvanced2Operations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnMax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2pt"
            android:layout_marginRight="2pt"
            android:layout_weight="1"
            android:focusable="false"
            android:text="@string/maxUI"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnMin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2pt"
            android:layout_marginRight="2pt"
            android:layout_weight="1"
            android:focusable="false"
            android:text="@string/minUI"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnSqrt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2pt"
            android:layout_marginRight="2pt"
            android:layout_weight="1"
            android:focusable="false"
            android:text="@string/sqrtUI"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnPow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2pt"
            android:layout_marginRight="2pt"
            android:layout_weight="1"
            android:focusable="false"
            android:text="@string/powUI"
            android:textAllCaps="false" />
    </LinearLayout>

    <Button
        android:id="@+id/btnCalculate"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2pt"
        android:layout_marginRight="2pt"
        android:focusable="false"
        android:text="@string/equals"
        android:textSize="8pt" />

    <LinearLayout
        android:id="@+id/layBottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"></LinearLayout>

</LinearLayout>